Fix func update and create subscriber and implement schedule for job